fixed white space under the .top

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,6 @@ body {
 .top {
     padding: 0 0 80px 0;
     background-color: #101010;
-    margin-bottom: 150px;
 }
 .top nav {
     display: flex;
@@ -610,7 +609,6 @@ body {
 
 .services-section {
     height: 150vh;
-    margin-top: 750px;
     background-color: #101010;
     display: flex;
     padding: 100px 180px 0px 180px;
