--- a/responsive_css_files/main-responsive.css
+++ b/responsive_css_files/main-responsive.css
@@ -4,7 +4,6 @@
     .top {
         padding: 0 0 80px 0;
         background-color: #101010;
-        margin-bottom: 130px;
     }
     .top nav {
         display: flex;
@@ -520,7 +519,6 @@
     
     .services-section {
         height: fit-content;
-        margin-top: 150px;
         background-color: #101010;
         display: flex;
         flex-direction: column;
@@ -2205,7 +2203,6 @@
     
     .services-section {
         height: fit-content;
-        margin-top: 650px;
         background-color: #101010;
         display: flex;
         flex-direction: column;
@@ -3811,7 +3808,6 @@
     
     .services-section {
         height: 150vh;
-        margin-top: 750px;
         background-color: #101010;
         display: flex;
         padding: 100px 20px 0px 20px;
@@ -5406,7 +5402,6 @@
     
     .services-section {
         height: 150vh;
-        margin-top: 750px;
         background-color: #101010;
         display: flex;
         padding: 100px 70px 0px 70px;
@@ -6598,7 +6593,6 @@
     
     .services-section {
         height: 150vh;
-        margin-top: 750px;
         background-color: #101010;
         display: flex;
         padding: 100px 120px 0px 120px;
